--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^3.4.17"
   }
 }
