--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "init": "^0.1.2",
     "npx": "^10.2.2",
     "react-router-dom": "^7.2.0",
